--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "author": "Oscar Larrotta",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.15.4",
+    "@babel/preset-env": "^7.15.4",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-uglify": "^3.0.2",
